Fix CardTitleAlign on Mobile (Close #1)

--- a/style.css
+++ b/style.css
@@ -242,6 +242,10 @@ body {
 	margin-bottom: 17px;
 }
 
+.project .content .top h1 {
+	text-align: start;
+}
+
 .project .content .top img {
 	width: 32px;
 	height: 32px;
